[metadata]
name = prometheus
version = 0.0.1
author = Brendan Scullion
author_email = brsc2909@gmail.com
description = Crypto currency trading platform
long_description = file: README.md
classifiers =
    Development Status :: 5 - Development/Stable
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
install_requires =
    pyyaml
    requests